UserTestDat fix